--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,13 @@ add_executable(
     test.cpp
 )
 
+
+find_package(OpenCV REQUIRED)
+include_directories(${OpenCV_INCLUDE_DIRS})
+add_subdirectory(../vendor/dlib dlib_build)
+
+
 target_include_directories(cpp-test PUBLIC ../vendor/googletest/googletest/include 
                                            ${CMAKE_SOURCE_DIR}/include)
-target_link_libraries(cpp-test PUBLIC gtest)
+target_link_libraries(cpp-test PUBLIC gtest dlib::dlib ${OpenCV_LIBS})
+
